app/styles/_layout.scss
/** Site */

#site {
	@include box-shadow(rgba(black, 0.8) 0 0 10px);
	background: $body-bg;
	min-height: 100%;
	padding-top: $topbar-height;
	position: relative;
	z-index: 50;
}

#site-loader {
	@include border-radius(5px);
	background: $body-bg;
	height: 100px;
	left: 50%;
	margin-left: -50px;
	margin-top: -50px;
	padding: 12px;
	position: fixed;
	top: 50%;
	width: 100px;
	z-index: 90;

	.no-js & {
		display: none !important;
	}
}

.fade-animation {
	@include transition(opacity 0.5s ease-in-out);
	&.ng-enter { opacity: 0; &.ng-enter-active { opacity: 1; } }
	&.ng-leave { opacity: 1; &.ng-leave-active { opacity: 0; } }
}

@import "spinner";

/** Header */

#site-header {
	@extend .fixed;

	.top-bar {
		@include transition-property(max-height);
		@include transition-duration(1s);
		max-height: $topbar-height;
		height: auto;

		&.expanded {
			max-height: 600px;
		}
	}

	.top-bar-section {
		overflow: auto;
	}

	li > a {
		text-transform: uppercase;
		color: $topbar-link-color;

		&:hover {
			color: $topbar-link-color-hover;
		}
	}
}

#secondary-menu {
	li > a {
		color: #414141;
		font-weight: bold;
	}

	.social-link {
		@include transition-property(background-color);
		@include transition-duration(0.25s);
		overflow: hidden;
		text-indent: -2000px;

		&.twitter {
			@extend .theme-topbar-twitter;
			background-color: #414141;
			&:hover { background-color: #27A9E1; }
		}

		&.instagram {
			@extend .theme-topbar-instagram;
			background-color: #414141;
			&:hover { background-color: #917470; }
		}

		&.facebook {
			@extend .theme-topbar-facebook;
			background-color: #414141;
			&:hover { background-color: #3C5A99; }
		}
	}
}

/** Footer */

#site-footer {
	color: $body-font-color;
	text-align: center;

	h1, h2, h3, h4, p, a {
		color: $body-font-color;
	}

	.title {
		border-bottom: 2px solid $body-font-color;
	}
}

#footer-content {
	background: $topbar-bg;
	background: rgba($topbar-bg, 0.8);
	min-height: 350px;

	.widget {
		padding: ($column-gutter/2) 0;

		div, p, form, input, .widget-title {
			display: inline-block;
			font-family: $body-font-family;
			font-style: normal;
			margin: 0;
		}

		input[type=text],
		input[type=email],
		input[type=password] {
			@include box-shadow(none);
			background: none;
			border: none;
			border-bottom: 1px solid $body-font-color;
			color: inherit;
			font-size: 1.2em;
		}

		input[type=submit] {
			background: none;
			border: none;
			color: inherit;
			text-transform: uppercase;
		}
	}
}

#footer-map {
	background-repeat: no-repeat;
	background-position: bottom center;
	background-size: auto 100%;
	display: block;
	height: 550px;

	.touch & {
		display: none;
	}
}

/** Site content */

#site-content {
	min-height: 100%;
	overflow: hidden;

	.post &,
	.page & {
		margin-top: $column-gutter/2;
	}
}

.view-animation-wrapper {
	background: $body-bg;
	position: absolute;
	top: 0;
	left: 0;
	padding-top: $topbar-height;
	width: 100%;
	height: 100%;
	overflow: hidden;
	z-index: 95;
}

